# Api-Test-MCP

./: .gitignore  README.md  README_CN.md  auth.py  case_generator.py  config.yaml  conftest.py  demo_calculator.py  demo_fastapi.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: publish.yml  tests.yml
atf/: USAGE_EXAMPLE.py  __init__.py  auth.py  case_generator.py  conftest.py  mcp_server.py  runner.py  unit_case_generator.py
atf/assets/: report.css
atf/core/: __init__.py  assert_handler.py  config_manager.py  log_manager.py  login_handler.py  request_handler.py  variable_resolver.py
atf/handlers/: __init__.py  notification_handler.py  report_generator.py  teardown_handler.py
atf/mcp/: executor.py  models.py  utils.py
atf/mcp/tools/: health_tool.py  metrics_tools.py  runner_tools.py  testcase_tools.py  unittest_tools.py
atf/utils/: __init__.py  helpers.py
configs/: mcp.env.example
docs/: mcp_dev_guide.md  mcp_ops_config.md  mcp_spec.md
test_cases/: auth_integration.yaml  carousels.yaml  featured_products.yaml  products_admin.yaml  products_public.yaml  settings.yaml  test_MCP功能测试Demo.py  test_demo.py
test_cases/demo/: test_test_calculator.py  test_test_calculator_remote.py  test_test_calculator_v2.py  test_test_demo_fastapi.py
test_cases/merchant/demo/: test_device_bind.py  test_report_api_v2.py
test_cases/merchant/device_management/: test_device_bind_washing.py  test_goods_list_and_statusTotals.py
test_cases/nanshan/report/: test_report_v2_get_construct_template.py  test_report_v2_get_prep_template.py  test_report_v2_get_report_by_task.py  test_report_v2_get_types.py  test_report_v2_list_reports.py  (+12 more)
test_cases/user/: test_washing_machine_ordering.py
tests/: demo_test.yaml  mcp_test_demo.yaml  test_case_demo.yaml
tests/demo/: test_calculator.yaml  test_calculator_remote.yaml  test_calculator_v2.yaml  test_demo_fastapi.yaml
tests/unit/: demo_unittest.yaml
tests/user/: test_washing_machine_ordering.yaml
utils/: assert_handler.py  config_manager.py  dingtalk_handler.py  globals.py  project_login_handler.py  report_generator.py  request_handler.py  teardown_handler.py  variable_resolver.py
(+21 files in other folders)
