[project]
name = "api-auto-test"
version = "0.1.0"
description = "API Auto Test Framework with MCP Server"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "GalaxyXieyu", email = "galaxyxieyu@github.com"}]
keywords = ["api", "testing", "mcp", "automation", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
homepage = "https://github.com/GalaxyXieyu/Api-Test-MCP"
repository = "https://github.com/GalaxyXieyu/Api-Test-MCP"
documentation = "https://github.com/GalaxyXieyu/Api-Test-MCP#readme"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pytest>=7.0",
    "allure-pytest>=2.13",
    "requests>=2.31",
    "urllib3<2",  # urllib3 v2 requires OpenSSL 1.1.1+, incompatible with macOS LibreSSL
    "loguru>=0.4.1",
    "mysql-connector-python>=8.0.33",
    "dingtalkchatbot>=1.5.7",
    "pytest-html>=2.1.1",
]

[project.scripts]
api-auto-test-mcp = "atf.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atf"]

[tool.uv]
